maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^PledgeMaze:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  dir = dir + 1
  ^PledgeMaze:19: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()){
  ^PledgeMaze:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()){
  ^PledgeMaze:27: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()){
  ^PledgeMaze:31: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  avance()
  ^PledgeMaze:32: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return dir
  ^