maze.pledge.PledgeMaze.scala.code
override def run() {
  var cmpt:Int = 0
  while(!estSurBiscuit){
    do{
      cmpt = keepHandOnSideWall() + cmpt
    }
    while((isDirectionFree(Direction.NORTH))&&(cmpt==0)) 
  }
  prendBiscuit()
}



def keepHandOnSideWall():Int{
  var dir:Int = 0
  gauche()
  dir = dir + 1
  if (estFaceMur()){
    droite()
    dir = dir -1
  }
  if (estFaceMur()){
    droite()
    dir = dir -1
  }
  if (estFaceMur()){
    droite()
    dir = dir -1
  }
  avance()
  return dir
}

def isDirectionFree(dir:Direction):Boolean = {
  tmp = getDirection()
  setDirection(dir)
  if (estFaceMur) {
    setDirection(tmp)
    return false
  } else {
    setDirection(tmp)
    return true
  }
}



